--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-ui": "^2.4.5",
     "vue": "^2.6.14",
+    "vue-amap": "^0.5.10",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -19,6 +21,7 @@
     "@vue/cli-service": "~5.0.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
