--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "cnpm": "^7.1.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.4.5",
+    "swiper": "^5.4.5",
     "vue": "^2.6.14",
     "vue-amap": "^0.5.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
